--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-CI">
   <head>
-    <meta charset="uft-8"/>
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Pricing component</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
